2025-03-08T01:20:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13732396160 # 587
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-08
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 919 1399 / 935 1415
* notice: next accum: outdated-unq outdated-all / unq all: 920 1400 / 936 1416
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-22] / [2025-03-07]

2025-03-07T01:48:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13711991649 # 586
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-07
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 918 1398 / 933 1413
* notice: next accum: outdated-unq outdated-all / unq all: 919 1399 / 935 1415
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-02-21] / [2025-03-06]

2025-03-06T01:47:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13689366286 # 585
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-06
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 917 1397 / 933 1413
* notice: next accum: outdated-unq outdated-all / unq all: 918 1398 / 933 1413
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-20] / []

2025-03-05T01:47:35Z: